syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesplatform.protobuf.service";
option csharp_namespace = "WavesEnterprise";

service TransactionService {

  rpc TransactionExists (TransactionExistsRequest) returns (TransactionExistsResponse);
}

message TransactionExistsRequest {
  string tx_id = 1;
}

message TransactionExistsResponse {
  bool exists = 1;
}
